<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="design_category"
        app:title="@string/preference_category_title_design">

        <!-- フォントリスト -->
        <Preference
            app:key="@string/preference_key_font_list"
            app:title="@string/preference_title_font"/>

        <!-- スタイルリスト -->
        <Preference
            app:key="activity"
            app:title="@string/preference_title_style">

            <intent
                android:targetPackage="itookay.android.org"
                android:targetClass="itookay.android.org.setting.StyleSettingActivity" />

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="notification_category"
        app:title="@string/preference_category_title_notification">

        <!-- サウンドリスト -->
        <Preference
            app:key="@string/preference_key_ringtone_list"
            app:title="@string/preference_title_sound"/>

        <!-- バイブレーションリスト -->
        <Preference
            app:key="@string/preference_key_vibration"
            app:title="@string/preference_title_vibration">
        </Preference>

        <!-- アラーム動作時間 -->
        <Preference
            app:key="@string/preference_key_alarm_active_time"
            app:title="@string/preference_title_alarm_active_time"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="background_category"
        app:title="@string/preference_category_title_background">

        <!-- バックグラウンド動作時の通知
        <Preference
            app:key="@string/preference_key_background_notification"
            app:title="@string/preference_title_background_notification">
        </Preference>
        -->

        <!-- ディスプレイを消灯しない -->
        <SwitchPreferenceCompat
            app:key="@string/preference_key_keep_screen_on"
            app:title="@string/preference_title_keep_screen_on"
            app:defaultValue="true">
        </SwitchPreferenceCompat>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
